2001-11-21  Rob Browning  <rlb@defaultvalue.org>

	* README: add a note to the Running section indicating that it's
	obsolete.  We'll need to update this soon.

	* src/scm/startup-design.txt: some updates -- needs overhaul.

	* src/bin/guile.in: trivial guile override wrapper.

	* src/bin/gnucash.in: rearrange code so that the file can be
	interactively loaded for debugging without firing up gnucash
	immediately.

	* src/bin/gnucash-env.in: add the script-override directory to the
	front of the user's PATH.

	* src/bin/Makefile.am (gncoverridedir): new var.
	(gncoverride_SCRIPTS): new var -- add guile.
	(guile): new target -- guile override stub script.

	* src/bin/.cvsignore: add guile.

	* doc/gnucash.1: remove some vestigal envt var refs.

	* configure.in: add GNC_LIBEXECDIR.
	(AC_OUTPUT): add src/bin/Makefile.

	* src/bin/gnucash-env.in: carefully setup PATH to pick up correct
	guile.

	* src/bin/: new directory.  Added so that scripts will be in a
	subdir and can be re-made/installed without a full build.

	* src/bin/gnucash-env.in: new file -- you can use this to invoke
	programs or scripts with the proper gnucash
	environment. i.e. "gnucash-env guile -s foo bar" or
	"gnucash-env some-command arg1 arg2 ..."

	* src/gnome/window-main.c (gnc_shutdown): moved here for now, but
	should eventually be moved to app-utils (or similar) and made
	public again.

	* src/bin/gnucash.in: moved here from ../gnucash.sh.in.  Now uses
	gnucash-env to set up environment.

	* src/gnome/gnucash.c.in: removed all code except
	gnc_setup_gettext, which should be moved to app-utils, or
	core-utils soon.

	* src/scm/main.scm: remove append-path calls - handled in gnucash-env.
	(append-path): unused -- deleted.
	(gnc:main): handle setlocale here.

	* src/.cvsignore: remove bits that moved to src/bin.

	* src/Makefile.am: handle new src/bin directory, and remove all
	the old gnucash binary bits.

	* src/gnc-main.c: deleted.

	* src/gnucash-make-guids.in: moved to src/bin.
