@@ -39,5 +39,6 @@ AM_CFLAGS = \
   -I${top_srcdir}/src/gnome-utils \
   -I${top_srcdir}/src/register/register-core \
   ${GUILE_INCS} \
+  ${GLADE_CFLAGS} \
   ${GNOME_INCLUDEDIR} \
   ${GLIB_CFLAGS}
